# Glimpse-Speech

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: apple_speech.rs  cleanup.rs  diarization.rs  nvidia.rs  parakeet.rs  whisper.rs
scripts/: cli_smoke.sh  openai_api_smoke.py
src/: api.rs  audio.rs  cleanup.rs  cli.rs  diarization.rs  dictionary.rs  itn.rs  lib.rs  models.rs  provider.rs  service.rs  vad.rs
src/engines/: apple.rs  mod.rs  nemotron.rs  parakeet.rs  sortformer.rs  unified.rs  whisper.rs
src/remote/: engine.rs  mod.rs  provider.rs
swift/: apple_speech.swift
tests/: audio.rs  nvidia.rs  parakeet.rs
