[package]
name = "glimpse-speech"
version = "1.0.3"
edition = "2021"
rust-version = "1.85"
description = "A transcription API powered by whisper-rs and parakeet-rs"
license = "MIT"

[features]
default = []
whisper = ["dep:whisper-rs"]
parakeet = ["dep:parakeet-rs"]
all = ["whisper", "parakeet"]

[dependencies]
hound = "3.5.1"

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.16.0", features = ["metal"], optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version = "0.16.0", features = ["vulkan"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
whisper-rs = { version = "0.16.0", features = ["vulkan"], optional = true }

[target.'cfg(not(all(target_os = "macos", target_arch = "x86_64")))'.dependencies]
parakeet-rs = { version = "0.3.4", optional = true }

[[example]]
name = "whisper"
required-features = ["whisper"]

[[example]]
name = "parakeet"
required-features = ["parakeet"]
