[package]
name = "glimpse-speech"
version = "1.1.0"
edition = "2021"
rust-version = "1.85"
description = "A transcription API powered by whisper-rs and NVIDIA speech models via parakeet-rs"
license = "MIT"
repository = "https://github.com/LegendarySpy/Glimpse-Speech"
homepage = "https://github.com/LegendarySpy/Glimpse-Speech"
documentation = "https://docs.rs/glimpse-speech"

[features]
default = []
whisper = ["dep:whisper-rs"]
nvidia = ["dep:parakeet-rs"]
parakeet = ["nvidia"]
all = ["whisper", "nvidia"]

[dependencies]
hound = "3.5.1"

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.16.0", features = ["metal"], optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version = "0.16.0", features = ["vulkan"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
whisper-rs = { version = "0.16.0", features = ["vulkan"], optional = true }

[target.'cfg(not(all(target_os = "macos", target_arch = "x86_64")))'.dependencies]
parakeet-rs = { version = "0.3.4", optional = true }

[[example]]
name = "whisper"
required-features = ["whisper"]

[[example]]
name = "nvidia"
required-features = ["nvidia"]
