[package]
name = "glimpse-speech"
version = "1.3.4"
edition = "2021"
rust-version = "1.85"
description = "A transcription API powered by whisper-rs and NVIDIA speech models via parakeet-rs"
license = "MIT"
repository = "https://github.com/LegendarySpy/Glimpse-Speech"
homepage = "https://github.com/LegendarySpy/Glimpse-Speech"
documentation = "https://docs.rs/glimpse-speech"

[features]
default = []
whisper = ["dep:whisper-rs"]
nvidia = ["dep:parakeet-rs"]
parakeet = ["nvidia"]
all = ["whisper", "nvidia"]
api = ["dep:axum", "dep:tower-http"]
remote = ["reqwest/multipart"]
cli = ["api", "dep:clap"]

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["multipart"], optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
hound = "3.5.1"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tokio = { version = "1", features = ["fs", "io-util", "net", "rt-multi-thread", "signal", "time"] }
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["cors"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.16.0", features = ["metal"], optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version = "0.16.0", features = ["vulkan"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
whisper-rs = { version = "0.16.0", features = ["vulkan"], optional = true }

[target.'cfg(not(all(target_os = "macos", target_arch = "x86_64")))'.dependencies]
parakeet-rs = { version = "0.3.5", optional = true, features = ["sortformer"] }

[[example]]
name = "whisper"
required-features = ["whisper"]

[[example]]
name = "nvidia"
required-features = ["nvidia"]

[[example]]
name = "diarization"
required-features = ["nvidia"]

[[bin]]
name = "glimpse-speech"
path = "src/bin/glimpse-speech.rs"
required-features = ["cli"]
